Fin Partie 2 - Page de Connexion

--- a/Portfolio-architecte-sophie-bluel-master/FrontEnd/index.html
+++ b/Portfolio-architecte-sophie-bluel-master/FrontEnd/index.html
@@ -12,13 +12,16 @@
 	<script src="./assets/script.js" async></script>
 </head>
 <body>
-<header>
+	<div class="mode_edition">
+
+	</div>  
+<header>	
 	<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
 	<nav>
 		<ul>
 			<li>projets</li>
 			<li>contact</li>
-			<li>login</li>
+			<li class="logout"><a href="login.html"></a>login</li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
@@ -36,12 +39,15 @@
 		</article>
 	</section>
 	<section id="portfolio">
-		<h2>Mes Projets</h2>
-		<div class="filters">
+		<div class="modify">			
+			<h2>Mes Projets</h2>				
 			
 		</div>
-		
+		<div class="filters">
+
+		</div>		
 		<div class="gallery">
+
 		</div>
 	</section>
 	<section id="contact">
@@ -58,7 +64,6 @@
 		</form>
 	</section>
 </main>
-
 <footer>
 	<nav>
 		<ul>
@@ -66,6 +71,5 @@
 		</ul>
 	</nav>
 </footer>
-
 </body>
 </html>
