--- a/Portfolio-architecte-sophie-bluel-master/FrontEnd/index.html
+++ b/Portfolio-architecte-sophie-bluel-master/FrontEnd/index.html
@@ -14,6 +14,9 @@
 <body>
 	<div class="mode_edition">
 
+	</div>
+	<div class="modal_container">
+
 	</div>  
 <header>	
 	<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
@@ -39,8 +42,9 @@
 		</article>
 	</section>
 	<section id="portfolio">
+		<h2>Mes Projets</h2>
 		<div class="modify">			
-			<h2>Mes Projets</h2>				
+							
 			
 		</div>
 		<div class="filters">
