Fin de la modale

--- a/Portfolio-architecte-sophie-bluel-master/FrontEnd/index.html
+++ b/Portfolio-architecte-sophie-bluel-master/FrontEnd/index.html
@@ -15,9 +15,26 @@
 	<div class="mode_edition">
 
 	</div>
-	<div class="modal_container">
+	<div class="modal_gallery">
 
 	</div>  
+	<div class="modal_form">
+		<section id="contact" class="modal_form_section">
+            <form action="#" method="post">
+				<label for="name">Titre</label>
+				<input type="name" name="name" id="name">
+				<label for="name">Catégorie</label>
+			    <select id="select_category">
+                    <option value="Objets">Objets</option>
+					<option value="Appartements">Appartements</option>
+					<option value="Hôtels_et_restaurants">Hôtels & restaurants</option>
+					<option value="Bar_et_restaurant">Bar & restaurant</option>
+					<input class="modal_form_button" type="submit" value="Valider">
+				</select>			
+			</form>
+		</section>        
+		</div>
+	</div>
 <header>	
 	<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
 	<nav>
@@ -42,10 +59,12 @@
 		</article>
 	</section>
 	<section id="portfolio">
-		<h2>Mes Projets</h2>
-		<div class="modify">			
+		<div class="modify_container">
+		    <h2>Mes Projets</h2>
+		    <div class="modify">			
 							
 			
+		    </div>
 		</div>
 		<div class="filters">
 
