--- a/Portfolio-architecte-sophie-bluel-master/FrontEnd/index.html
+++ b/Portfolio-architecte-sophie-bluel-master/FrontEnd/index.html
@@ -16,23 +16,44 @@
 
 	</div>
 	<div class="modal_gallery">
+        <div class="overlay overlay_gallery"></div>
+		<div class="modal">
+			<img class="modal_close modal_gallery_close" src="./assets/icons/closemodal.svg" alt="Fermeture de la modale">
+			<span>Galerie photo</span>
+			<div class="modal_works">
 
+			</div>
+			<p class="modal_line"></p>
+			<span class="modal_button modal_gallery_button">Ajouter une photo</span>
+		</div>
 	</div>  
 	<div class="modal_form">
-		<section id="contact" class="modal_form_section">
-            <form action="#" method="post">
-				<label for="name">Titre</label>
-				<input type="name" name="name" id="name">
-				<label for="name">Catégorie</label>
-			    <select id="select_category">
-                    <option value="Objets">Objets</option>
-					<option value="Appartements">Appartements</option>
-					<option value="Hôtels_et_restaurants">Hôtels & restaurants</option>
-					<option value="Bar_et_restaurant">Bar & restaurant</option>
+		<div class="overlay overlay_form"></div>
+		<div class="modal">
+			<img class="modal_close modal_form_close" src="./assets/icons/closemodal.svg" alt="Fermeture de la modale">
+			<img class="modal_arrow" src="./assets/icons/arrowmodal.svg" alt="Retour vers la galerie photo">
+			<span>Ajout photo</span>
+			<section id="contact" class="modal_form_section">
+				<form action="#" method="post">
+					<div class="modal_add_picture_container">
+						<img src="./assets/icons/picture.svg" alt="Photo">
+						<label class="modal_add_picture_button" type="photo">+ Ajouter photo
+							<input type="file" name="photo" id="photo">
+						</label>
+						<span class="modal_add_picture_text">jpg, png : 4mo max</span>
+					</div>
+					<label for="name">Titre</label>
+					<input type="name" name="name" id="name">
+					<label for="name">Catégorie</label>
+					<select id="select_category">
+						<option value="1">Objets</option>
+						<option value="2">Appartements</option>
+						<option value="3">Hôtels & restaurants</option>
+					</select>
 					<input class="modal_form_button" type="submit" value="Valider">
-				</select>			
-			</form>
-		</section>        
+				</form>
+				<p class="modal_line"></p>
+			</section>
 		</div>
 	</div>
 <header>	
