--- a/Portfolio-architecte-sophie-bluel-master/FrontEnd/login.html
+++ b/Portfolio-architecte-sophie-bluel-master/FrontEnd/login.html
@@ -26,11 +26,14 @@
     <main>
         <section id="contact">
             <h2>Log In</h2>
-            <form class='login_form' action="#" method="post">
+            <form class='login_form' name="login_form" action="#" method="post">
+                <p class="error user-error"></p>
                 <label for="email">Email</label>
                 <input type="email" name="email" id="email">
+                <p class="error email-error"></p>
                 <label for="password">Mot de passe</label>
-                <input type="password" name="password" id="password">                
+                <input type="password" name="password" id="password">
+                <p class="error password-error"></p>                
                 <input type="submit" value="Se connecter">
                 <a href="#" class="password">Mot de passe oublié</a>
             </form>
