--- a/Portfolio-architecte-sophie-bluel-master/FrontEnd/index.html
+++ b/Portfolio-architecte-sophie-bluel-master/FrontEnd/index.html
@@ -24,7 +24,7 @@
 				
 			</div>
 			<p class="validate validate_delete_works"></p>
-			<p class="modal_line"></p>
+			<hr class="modal_line">
 			<span class="modal_button modal_gallery_button">Ajouter une photo</span>
 		</div>
 	</div>  
@@ -53,9 +53,10 @@
 						
 					</select>
 					<p class="error error_add_works"></p>
+					<p class="validate validate_add_works"></p>
+					<hr class="modal_line">
 					<input id="modal_form_button" type="submit" value="Valider">
 				</form>
-				<p class="modal_line"></p>
 			</section>
 		</div>
 	</div>
